metrique-aggregation/tests/ui/fail/aggregate_no_strategy.stderr
error: field 'a' requires #[aggregate(strategy = ...)] attribute or if it is a key, use #[aggregate(key)]
 --> tests/ui/fail/aggregate_no_strategy.rs:7:5
  |
7 |     a: usize,
  |     ^
